Fixed vertical alignment issues in IE. Updated scroll down arrow color per design and updated implementation.

--- a/grav/user/themes/haywire/sass/common/_colors.sass
+++ b/grav/user/themes/haywire/sass/common/_colors.sass
@@ -13,6 +13,7 @@ $grey-light: hsl(0, 0%, 71%)
 $grey-lighter: hsl(0, 0%, 92%)
 
 $geyser: rgb(204,220,222)
+$white-rock: rgb(234,231,209)
 
 $white-ter: hsl(0, 0%, 96%)
 $white-bis: hsl(0, 0%, 98%)
